# Job_Applying_Agents

./: .env.example  .gitignore  Dockerfile  README.md  SYSTEM_DOCUMENTATION.md  alembic.ini  dashboard.py  docker-compose.yml  generate_resume_v2.py  generate_tailored_resume.py  pyproject.toml  requirements.txt
alembic/: env.py
data/: applications_log.csv  resume_template.docx  user_profile.txt
data/artifacts/: found_jobs.json  scored_results.json
data/generated-resumes/: MohammadSheriff_Airbnb_AI_Engineer___Community_Support_Engineer_20260705_0057.docx  MohammadSheriff_Databricks_AI_Engineer_-_FDE_20260705_0105.docx  MohammadSheriff_Databricks_AI_Engineer___FDE__Forward_Deployed_Engi_20260705_0052.docx  MohammadSheriff_Databricks_AI_Engineer___FDE__Forward_Deployed_Engi_20260705_0057.docx  ~$hammadSheriff_Airbnb_AI_Engineer___Community_Support_Engineer_20260705_0057.docx
src/: __init__.py  api.py  cli.py  config.py  database.py  pipeline.py  tasks.py
src/ingestion/: __init__.py  apify_scraper.py  base.py  greenhouse.py  lever.py  linkedin.py  orchestrator.py  remoteok.py  wellfound.py
src/mcp/: __init__.py  calendar_mcp.py  gmail_mcp.py
src/parser/: __init__.py  jd_parser.py
src/resume/: __init__.py  formatter.py  skills.py  tailoring_agent.py
src/review/: __init__.py  review_queue.py
src/scoring/: __init__.py  fit_scorer.py
src/submit/: __init__.py  api_submit.py  manual_submit.py
src/tracker/: __init__.py  application_tracker.py  csv_logger.py  sheets_tracker.py
src/vectorstore/: __init__.py  store.py
