[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-applying-agent"
version = "0.1.0"
description = "Automated job application agent targeting MAANG/FAANG and product-based companies outside India"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "jinja2>=3.1.0",
    "google-api-python-client>=2.130.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
job-agent = "src.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
